# microblog

./: .gitignore  README.md  config.py  pyproject.toml  tests.py
app/: __init__.py  cli.py  forms.py  models.py  routes.py
app/templates/: 404.html  500.html  _post.html  base.html  index.html  login.html  user.html
app/utils/: identicons.py  logging.py
migrations/versions/: 814a7c07dd90_init.py  a5d3e35c583d_user_about_me_and_last_seen.py  b6c1a66d4266_nuked.py
