[project]
name = "microblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-moment>=1.0.6",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pathlib>=1.0.1",
    "pydenticon>=0.3.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = ["ruff>=0.12.11"]

[tool.ruff]
exclude = ["migrations"]
